Fixed stats on mobile

--- a/src/components/Statistics.scss
+++ b/src/components/Statistics.scss
@@ -3,11 +3,12 @@
   top: 0;
   left: 0;
 
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
-  display: grid;
-  place-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   background: rgb(0, 0, 0, 0.6);
   z-index: 10000000;
@@ -20,8 +21,8 @@
   justify-content: center;
   align-items: center;
 
-  width: 80vw;
-  max-width: 600px;
+  width: 80%;
+  max-width: 700px;
   height: auto;
   background-color: #1e1e1e;
   border-radius: 5px;
@@ -60,5 +61,15 @@
     p {
       font-size: 10px;
     }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .leaderboard {
+    display: block;
+  }
+
+  .modal {
+    width: 100%;
   }
 }
